first batch of fixes
this addresses the following:

 * mathjax had been accidentally ommitted, has been added back
 * contrast between dark blue and dark green was too low
 * list elements were left-aligned, now they are justified
 * list styling was not applied to the nav at the bottom

this does not yet address the fonts.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,12 +67,8 @@ hr {
     border-top-width: 2px;
 }
 
-a.broken {
-    color: #c00000;
-}
-
 h2 {
-	border-color: #333;
+	border-color: #666;
 }
 
 header {
